tests/src/frontend/typechecking/invalid/pattern_match_tuple2.sk
fun main(): void {
  p = (42, "No");
  print_raw(
    p match {
    | (x, y) -> x.toString() + " " + y
    | _ -> "dead"
    },
  )
}
